...
        if isLastQuestion() {
            let text = getCorrectAnswers() == questionsAmount ?
                "Поздравляем, вы ответили на 10 из 10!" :
                "Вы ответили на \(getCorrectAnswers())/\(questionsAmount), попробуйте ещё раз!"

            let viewModel = QuizResults(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            statisticService.store(correct: getCorrectAnswers(), total: questionsAmount)
            viewController?.clearPosterBorder()
            viewController?.showResults(result: viewModel)
        } else {
...
